--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <!-- <a href="https://storyset.com/web">Web illustrations by Storyset</a> -->
 
-    <title>Pioneers - All</title>
+    <title>Pioneers - All Digital</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
@@ -143,7 +144,7 @@
                 >
                   <div class="row">
                     <div class="col-lg-12">
-                      <h6>Digital Transformation</h6>
+                      <h6>Digital Transformation &amp; Smart Solutions</h6>
                       <h2>We Digitize Your Organization To The Max</h2>
                       <p>
                         We offer services that help you transform your company
@@ -166,7 +167,7 @@
                   data-wow-duration="1s"
                   data-wow-delay="0.5s"
                 >
-                  <img src="assets/images/PIONEERS-Logo.png" alt="" />
+                  <img src="assets/images/SEO-bro.png" alt="" />
                 </div>
               </div>
             </div>
@@ -377,7 +378,7 @@
                           <span class="icon"
                             ><img src="assets/images/printing.png" alt=""
                           /></span>
-                          Smart Printing Solution's
+                          Smart Printing Solutions
                         </div>
                       </div>
                       <div class="last-thumb">
@@ -464,9 +465,8 @@
                               <div class="col-lg-6 align-self-center">
                                 <div class="left-text">
                                   <h4>
-                                    Improve You'r Organization Efficiency,
-                                    Reduce Errors, And Increase Customer
-                                    Engagement
+                                    Improve Your Organization Efficiency, Reduce
+                                    Errors, And Increase Customer Engagement
                                   </h4>
                                   <p>
                                     With a strong and solid experience, in
@@ -524,9 +524,9 @@
                             <div class="row">
                               <div class="col-lg-6 align-self-center">
                                 <div class="left-text">
-                                  <h4>Extract You'r Data From any where</h4>
+                                  <h4>Extract Your Data From any where</h4>
                                   <p>
-                                    We are dealing with the industry leader's AI
+                                    We are dealing with the industry leaders AI
                                     based products in the field of scanning and
                                     capturing solutions. Our experts are
                                     confident to deliver the solution for your
@@ -583,7 +583,7 @@
                             <div class="row">
                               <div class="col-lg-6 align-self-center">
                                 <div class="left-text">
-                                  <h4>Track &amp; Manage You'r Assets</h4>
+                                  <h4>Track &amp; Manage Your Assets</h4>
                                   <p>
                                     The Asset Management software will provide
                                     you with a holistic view of your
@@ -643,8 +643,8 @@
                               <div class="col-lg-6 align-self-center">
                                 <div class="left-text">
                                   <h4>
-                                    Automates You'r Repetitive, Rules-Based
-                                    Tasks Using Bots
+                                    Automates Your Repetitive, Rules-Based Tasks
+                                    Using Bots
                                   </h4>
                                   <p>
                                     Pioneers offers Robotic Process Automation
@@ -707,7 +707,7 @@
                               <div class="col-lg-6 align-self-center">
                                 <div class="left-text">
                                   <h4>
-                                    Let Us Manage You'r Organization's Printing
+                                    Let Us Manage Your Organizations Printing
                                     Infrastructure
                                   </h4>
                                   <p>
@@ -767,15 +767,15 @@
                                   <h4>Printers</h4>
                                   <p>
                                     The latest inkjet technology is paving the
-                                    way for some of the world's fastest
-                                    printers. With cold printing Technology and
-                                    various different finishing options, these
-                                    machines promise an impressive return on
-                                    investment. Furthermore, a competitive cost
-                                    per click ensures that color is no longer a
-                                    financial challenge when printing. whether
-                                    you want to print forms, booklets, or
-                                    perfect-binded books its worth looking into.
+                                    way for some of the worlds fastest printers.
+                                    With cold printing Technology and various
+                                    different finishing options, these machines
+                                    promise an impressive return on investment.
+                                    Furthermore, a competitive cost per click
+                                    ensures that color is no longer a financial
+                                    challenge when printing. whether you want to
+                                    print forms, booklets, or perfect-binded
+                                    books its worth looking into.
                                   </p>
                                   <div class="ticks-list">
                                     <span
