--- a/index.html
+++ b/index.html
@@ -366,7 +366,6 @@
                         <div class="thumb">
                           <span class="icon"
                             ><img
-                              style="margin-bottom: 3px; max-width: 76px"
                               src="assets/images/service-icon-04.png"
                               alt=""
                           /></span>
@@ -376,7 +375,10 @@
                       <div>
                         <div class="thumb">
                           <span class="icon"
-                            ><img src="assets/images/printing.png" alt=""
+                            ><img
+                              style="margin-bottom: 3px; max-width: 88px"
+                              src="assets/images/printing.png"
+                              alt=""
                           /></span>
                           Smart Printing Solutions
                         </div>
@@ -385,7 +387,7 @@
                         <div class="thumb">
                           <span class="icon"
                             ><img
-                              style="margin-bottom: 3px; max-width: 80px"
+                              style="margin-bottom: 3px; max-width: 88px"
                               src="assets/images/panel.png"
                               alt=""
                           /></span>
