--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
   <body>
     <!-- ***** Preloader Start ***** -->
     <div id="js-preloader" class="js-preloader">
+      <div class="column">
+        <img src="assets/images/PIONEERS-Logo.png" alt="Loadiing...." />
+      </div>
+
       <div class="preloader-inner">
         <span class="dot"></span>
         <div class="dots">
@@ -105,10 +109,10 @@
               </li>
               <li class="scroll-to-section"><a href="#about">About Us</a></li>
               <li class="scroll-to-section">
-                <a href="#services">Our Services</a>
+                <a href="#ourProducts">Our Products</a>
               </li>
               <li class="scroll-to-section">
-                <a href="#portfolio">Projects</a>
+                <a href="#industries">Industries</a>
               </li>
               <!-- <li class="scroll-to-section"><a href="#blog">Blog</a></li> -->
               <li class="scroll-to-section">
@@ -297,7 +301,7 @@
       </div>
     </div>
 
-    <div id="services" class="services section" style="padding-bottom: 20px">
+    <div id="ourProducts" class="services section" style="padding-bottom: 30px">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
@@ -889,8 +893,24 @@
     </div>
 
     <!--industries-->
-    <section class="testimonial-section d-flex align-items-center">
-      <div class="container">
+    <section
+      id="industries"
+      class="testimonial-section d-flex align-items-center"
+    >
+      <div style="padding-top: 20px" class="container">
+        <div class="row">
+          <div class="col-lg-5">
+            <div
+              class="section-heading wow fadeInLeft"
+              data-wow-duration="1s"
+              data-wow-delay="0.3s"
+            >
+              <h6>Industries</h6>
+              <h4>See Our Recent <em>Projects</em></h4>
+              <div class="line-dec"></div>
+            </div>
+          </div>
+        </div>
         <div class="row align-items-center">
           <div class="col-lg-8 testi-img">
             <div class="img-box">
