--- a/index.html
+++ b/index.html
@@ -171,7 +171,10 @@
                   data-wow-duration="1s"
                   data-wow-delay="0.5s"
                 >
-                  <img src="assets/images/SEO-bro.png" alt="" />
+                  <img
+                    src="assets/test/tell-us-about-your-needs-product.png"
+                    alt=""
+                  />
                 </div>
               </div>
             </div>
@@ -191,7 +194,7 @@
                   data-wow-duration="1s"
                   data-wow-delay="0.5s"
                 >
-                  <img src="assets/images/about-dec.png" alt="" />
+                  <img src="assets/test/about-us-page.png" />
                 </div>
               </div>
               <div
@@ -321,16 +324,18 @@
                 <div class="row">
                   <div class="col-lg-12">
                     <div class="menu">
-                      <div class="first-thumb active">
-                        <div class="thumb">
-                          <span class="icon"
-                            ><img
-                              src="assets/images/service-icon-03.png"
-                              alt=""
-                          /></span>
-                          Document Management
-                        </div>
-                      </div>
+                      <a href="#act">
+                        <div class="first-thumb active">
+                          <div class="thumb">
+                            <span class="icon"
+                              ><img
+                                src="assets/images/service-icon-03.png"
+                                alt=""
+                            /></span>
+                            Document Management
+                          </div>
+                        </div></a
+                      >
                       <div>
                         <div class="thumb">
                           <span class="icon"
@@ -400,7 +405,7 @@
                       </div>
                     </div>
                   </div>
-
+                  <div id="act"></div>
                   <!-- dms -->
                   <div class="col-lg-12">
                     <ul class="nacc">
@@ -1002,25 +1007,27 @@
                   </p>
                 </div>
               </div>
-              <button
-                class="carousel-control-prev"
-                type="button"
-                data-bs-target="#myCarousel"
-                data-bs-slide="prev"
-              >
-                <img src="img/icons/left-arrow.png" alt="prev" />
-                <span class="visually-hidden">Previous</span>
-              </button>
-              <button
-                class="carousel-control-next"
-                type="button"
-                data-bs-target="#myCarousel"
-                data-bs-slide="next"
-              >
-                <img src="img/icons/right-arrow.png" alt="prev" />
-                <span class="visually-hidden">Next</span>
-              </button>
             </div>
+          </div>
+          <div class="prev-nex-but">
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#myCarousel"
+              data-bs-slide="prev"
+            >
+              <img src="img/icons/left-arrow.png" alt="prev" />
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#myCarousel"
+              data-bs-slide="next"
+            >
+              <img src="img/icons/right-arrow.png" alt="prev" />
+              <span class="visually-hidden">Next</span>
+            </button>
           </div>
         </div>
       </div>
