--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
       </div>
     </div>
 
-    <div id="ourProducts" class="services section" style="padding-bottom: 30px">
+    <div id="ourProducts" class="services section">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
@@ -313,8 +313,8 @@
               data-wow-duration="1s"
               data-wow-delay="0.5s"
             >
-              <h6>Our Services</h6>
-              <h4>Digital <em>Transformation</em></h4>
+              <h6>Our Products</h6>
+              <h4>What Our Agency <em>Provides</em></h4>
               <div class="line-dec"></div>
             </div>
           </div>
@@ -324,89 +324,94 @@
                 <div class="row">
                   <div class="col-lg-12">
                     <div class="menu">
-                      <a href="#act">
-                        <div class="first-thumb active">
+                      <div class="first-thumb active">
+                        <a href="#act">
                           <div class="thumb">
                             <span class="icon"
-                              ><img
-                                src="assets/images/service-icon-03.png"
-                                alt=""
+                              ><img src="assets/images/2.png" alt=""
                             /></span>
                             Document Management
                           </div>
-                        </div></a
-                      >
-                      <div>
-                        <div class="thumb">
-                          <span class="icon"
-                            ><img src="assets/images/bpm.png" alt=""
-                          /></span>
-                          Business Process Automation
-                        </div>
+                        </a>
                       </div>
 
                       <div>
-                        <div class="thumb">
-                          <span class="icon"
-                            ><img src="assets/images/capt.png" alt=""
-                          /></span>
-                          Capturing Solutions
-                        </div>
-                      </div>
-                      <div>
-                        <div class="thumb">
-                          <span class="icon"
-                            ><img src="assets/images/rfid.png" alt=""
-                          /></span>
-                          RFID Asset Management
-                        </div>
+                        <a href="#act">
+                          <div class="thumb">
+                            <span class="icon"
+                              ><img src="assets/images/5.png" alt=""
+                            /></span>
+                            Business Process Automation
+                          </div>
+                        </a>
                       </div>
 
                       <div>
-                        <div class="thumb">
-                          <span class="icon"
-                            ><img src="assets/images/rpa2.png" alt=""
-                          /></span>
-                          Robotic Process Automation
-                        </div>
+                        <a href="#act">
+                          <div class="thumb">
+                            <span class="icon"
+                              ><img src="assets/images/6.png" alt=""
+                            /></span>
+                            Capturing Solutions
+                          </div>
+                        </a>
                       </div>
 
                       <div>
-                        <div class="thumb">
-                          <span class="icon"
-                            ><img
-                              src="assets/images/service-icon-04.png"
-                              alt=""
-                          /></span>
-                          Managed Printing Services
-                        </div>
+                        <a href="#act">
+                          <div class="thumb">
+                            <span class="icon"
+                              ><img src="assets/images/7.png" alt=""
+                            /></span>
+                            RFID Asset Management
+                          </div>
+                        </a>
                       </div>
+
                       <div>
-                        <div class="thumb">
-                          <span class="icon"
-                            ><img
-                              style="margin-bottom: 3px; max-width: 88px"
-                              src="assets/images/printing.png"
-                              alt=""
-                          /></span>
-                          Smart Printing Solutions
-                        </div>
+                        <a href="#act">
+                          <div class="thumb">
+                            <span class="icon"
+                              ><img src="assets/images/rpa2.png" alt=""
+                            /></span>
+                            Robotic Process Automation
+                          </div>
+                        </a>
                       </div>
+
+                      <div>
+                        <a href="#act">
+                          <div class="thumb">
+                            <span class="icon"
+                              ><img src="assets/images/14.png" alt=""
+                            /></span>
+                            Managed Printing Services
+                          </div>
+                        </a>
+                      </div>
+                      <div id="act">
+                        <a href="#act">
+                          <div class="thumb">
+                            <span class="icon"
+                              ><img src="assets/images/15.png" alt=""
+                            /></span>
+                            Smart Printing Solutions
+                          </div>
+                        </a>
+                      </div>
+
                       <div class="last-thumb">
-                        <div class="thumb">
-                          <span class="icon"
-                            ><img
-                              style="margin-bottom: 3px; max-width: 88px"
-                              src="assets/images/panel.png"
-                              alt=""
-                          /></span>
-                          Interactive Flat Panels
-                        </div>
+                        <a href="#act">
+                          <div class="thumb">
+                            <span class="icon"
+                              ><img src="assets/images/18.png" alt=""
+                            /></span>
+                            Interactive Flat Panels
+                          </div>
+                        </a>
                       </div>
                     </div>
                   </div>
-                  <div id="act"></div>
-                  <!-- dms -->
                   <div class="col-lg-12">
                     <ul class="nacc">
                       <li class="active">
@@ -467,8 +472,6 @@
                           </div>
                         </div>
                       </li>
-
-                      <!-- bpm -->
                       <li>
                         <div>
                           <div class="thumb">
@@ -527,8 +530,6 @@
                           </div>
                         </div>
                       </li>
-
-                      <!-- CS -->
                       <li>
                         <div>
                           <div class="thumb">
@@ -586,8 +587,6 @@
                           </div>
                         </div>
                       </li>
-
-                      <!-- am -->
                       <li>
                         <div>
                           <div class="thumb">
@@ -635,18 +634,13 @@
                               </div>
                               <div class="col-lg-6 align-self-center">
                                 <div class="right-image">
-                                  <img
-                                    src="assets/images/services-image-03.jpg"
-                                    alt=""
-                                  />
+                                  <img src="assets/images/asset.png" alt="" />
                                 </div>
                               </div>
                             </div>
                           </div>
                         </div>
                       </li>
-
-                      <!-- rpa -->
                       <li>
                         <div>
                           <div class="thumb">
@@ -700,7 +694,7 @@
                               <div class="col-lg-6 align-self-center">
                                 <div class="right-image">
                                   <img
-                                    src="assets/images/services-image.jpg"
+                                    src="assets/images/Robotics-cuate.png"
                                     alt=""
                                   />
                                 </div>
@@ -709,8 +703,6 @@
                           </div>
                         </div>
                       </li>
-
-                      <!-- mps -->
                       <li>
                         <div>
                           <div class="thumb">
@@ -759,7 +751,7 @@
                               <div class="col-lg-6 align-self-center">
                                 <div class="right-image">
                                   <img
-                                    src="assets/images/services-image.jpg"
+                                    src="assets/images/Printing invoices-pana.png"
                                     alt=""
                                   />
                                 </div>
@@ -768,7 +760,6 @@
                           </div>
                         </div>
                       </li>
-                      <!-- printers -->
                       <li>
                         <div>
                           <div class="thumb">
@@ -790,28 +781,28 @@
                                   </p>
                                   <div class="ticks-list">
                                     <span
-                                      ><i class="fa fa-check"></i> Optimized
-                                      Template</span
+                                      ><i class="fa fa-check"></i> Cost
+                                      savings</span
                                     >
                                     <span
-                                      ><i class="fa fa-check"></i> Data
-                                      Info</span
+                                      ><i class="fa fa-check"></i> Improved
+                                      security</span
                                     >
                                     <span
-                                      ><i class="fa fa-check"></i> SEO
-                                      Analysis</span
+                                      ><i class="fa fa-check"></i> Environmental
+                                      sustainability</span
                                     >
                                     <span
-                                      ><i class="fa fa-check"></i> Data
-                                      Info</span
+                                      ><i class="fa fa-check"></i> Improved
+                                      productivity</span
                                     >
                                     <span
-                                      ><i class="fa fa-check"></i> SEO
-                                      Analysis</span
+                                      ><i class="fa fa-check"></i> Simplified
+                                      management</span
                                     >
                                     <span
-                                      ><i class="fa fa-check"></i> Optimized
-                                      Template</span
+                                      ><i class="fa fa-check"></i>
+                                      Scalability</span
                                     >
                                   </div>
                                 </div>
@@ -819,7 +810,7 @@
                               <div class="col-lg-6 align-self-center">
                                 <div class="right-image">
                                   <img
-                                    src="assets/images/services-image.jpg"
+                                    src="assets/images/Printer-bro.png"
                                     alt=""
                                   />
                                 </div>
@@ -828,8 +819,6 @@
                           </div>
                         </div>
                       </li>
-
-                      <!-- panels -->
                       <li>
                         <div>
                           <div class="thumb">
@@ -873,12 +862,17 @@
                                       Template</span
                                     >
                                   </div>
+                                  <p>
+                                    Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit, sedr do eiusmod deis tempor
+                                    incididunt.
+                                  </p>
                                 </div>
                               </div>
                               <div class="col-lg-6 align-self-center">
                                 <div class="right-image">
                                   <img
-                                    src="assets/images/services-image.jpg"
+                                    src="assets/images/Monitor-rafiki.png"
                                     alt=""
                                   />
                                 </div>
