--- a/index.html
+++ b/index.html
@@ -31,7 +31,17 @@
   <body>
     <!-- ***** Preloader Start ***** -->
     <div id="js-preloader" class="js-preloader">
-      <div class="column">
+      <img src="assets/images/PIONEERS-Logo.png" alt="Loadiing...." />
+      <div class="row examples">
+        <div class="col-3">
+          <div class="snippet" data-title="dot-elastic">
+            <div class="stage">
+              <div class="dot-elastic"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- <div class="column">
         <img src="assets/images/PIONEERS-Logo.png" alt="Loadiing...." />
       </div>
 
@@ -42,7 +52,7 @@
           <span></span>
           <span></span>
         </div>
-      </div>
+      </div> -->
     </div>
     <!-- ***** Preloader End ***** -->
 
