--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- ***** Preloader Start ***** -->
     <div id="js-preloader" class="js-preloader">
       <img src="assets/images/PIONEERS-Logo.png" alt="Loadiing...." />
-      <div class="row examples">
+      <div class="row examples" style="position: absolute; margin-top: 12%">
         <div class="col-3">
           <div class="snippet" data-title="dot-elastic">
             <div class="stage">
@@ -324,7 +324,7 @@
               data-wow-delay="0.5s"
             >
               <h6>Our Products</h6>
-              <h4>What Our Agency <em>Provides</em></h4>
+              <h4>What Our Company <em>Provides</em></h4>
               <div class="line-dec"></div>
             </div>
           </div>
