--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- ***** Preloader Start ***** -->
     <div id="js-preloader" class="js-preloader">
       <img src="assets/images/PIONEERS-Logo.png" alt="Loadiing...." />
-      <div class="row examples" style="position: absolute; margin-top: 12%">
+      <div class="row examples possition">
         <div class="col-3">
           <div class="snippet" data-title="dot-elastic">
             <div class="stage">
