--- a/index.html
+++ b/index.html
@@ -181,10 +181,7 @@
                   data-wow-duration="1s"
                   data-wow-delay="0.5s"
                 >
-                  <img
-                    src="assets/test/tell-us-about-your-needs-product.png"
-                    alt=""
-                  />
+                  <img src="assets/images/SEO-bro.png" alt="" />
                 </div>
               </div>
             </div>
@@ -204,7 +201,7 @@
                   data-wow-duration="1s"
                   data-wow-delay="0.5s"
                 >
-                  <img src="assets/test/about-us-page.png" />
+                  <img src="assets/images/about-dec.png" />
                 </div>
               </div>
               <div
@@ -377,7 +374,7 @@
                           </div>
                         </a>
                       </div>
-
+                      <br />
                       <div>
                         <a href="#act">
                           <div class="thumb">
@@ -473,7 +470,7 @@
                               <div class="col-lg-6 align-self-center">
                                 <div class="right-image">
                                   <img
-                                    src="assets/images/services-image-04.jpg"
+                                    src="assets/images/Online document-rafiki.png"
                                     alt=""
                                   />
                                 </div>
@@ -531,7 +528,7 @@
                               <div class="col-lg-6 align-self-center">
                                 <div class="right-image">
                                   <img
-                                    src="assets/images/services-image-02.jpg"
+                                    src="assets/images/Visual data-amico.png"
                                     alt=""
                                   />
                                 </div>
@@ -651,6 +648,69 @@
                           </div>
                         </div>
                       </li>
+                      <li>
+                        <div>
+                          <div class="thumb">
+                            <div class="row">
+                              <div class="col-lg-6 align-self-center">
+                                <div class="left-text">
+                                  <h4>
+                                    Automates Your Repetitive, Rules-Based Tasks
+                                    Using Bots
+                                  </h4>
+                                  <p>
+                                    Pioneers offers Robotic Process Automation
+                                    (RPA), a cutting-edge technology that uses
+                                    software bots to automate repetitive,
+                                    rules-based tasks such as data entry, data
+                                    extraction, and report generation. RPA bots
+                                    can interact with different software systems
+                                    and applications, including web
+                                    applications, desktop applications, and
+                                    databases, making it an ideal solution for a
+                                    wide range of industries.
+                                  </p>
+                                  <div class="ticks-list">
+                                    <span
+                                      ><i class="fa fa-check"></i> Increased
+                                      productivity</span
+                                    >
+                                    <span
+                                      ><i class="fa fa-check"></i> Improved
+                                      accuracy</span
+                                    >
+                                    <span
+                                      ><i class="fa fa-check"></i> Cost
+                                      savings</span
+                                    >
+                                    <span
+                                      ><i class="fa fa-check"></i>
+                                      Scalability</span
+                                    >
+                                    <span
+                                      ><i class="fa fa-check"></i> Process
+                                      optimization</span
+                                    >
+                                    <span
+                                      ><i class="fa fa-check"></i> Improved
+                                      compliance</span
+                                    >
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="col-lg-6 align-self-center">
+                                <div class="right-image">
+                                  <img
+                                    src="assets/images/Robotics-cuate.png"
+                                    alt=""
+                                  />
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </li>
+                      <!------------------------>
                       <li>
                         <div>
                           <div class="thumb">
