--- a/index.html
+++ b/index.html
@@ -1165,7 +1165,66 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-lg-6">
+                      <form
+                        action="https://formsubmit.co/anas.alawadi@pioneers.ae"
+                        method="POST"
+                      >
+                        <div class="col-lg-6">
+                          <fieldset>
+                            <input
+                              type="name"
+                              name="name"
+                              id="name"
+                              placeholder="Name"
+                              autocomplete="on"
+                              required
+                            />
+                          </fieldset>
+                          <fieldset>
+                            <input
+                              type="text"
+                              name="email"
+                              id="email"
+                              pattern="[^ @]*@[^ @]*"
+                              placeholder="Your Email"
+                              required=""
+                            />
+                          </fieldset>
+                          <fieldset>
+                            <input
+                              type="subject"
+                              name="subject"
+                              id="subject"
+                              placeholder="Subject"
+                              autocomplete="on"
+                            />
+                          </fieldset>
+                        </div>
+                        <div class="col-lg-6">
+                          <fieldset>
+                            <textarea
+                              name="message"
+                              type="text"
+                              class="form-control"
+                              id="message"
+                              placeholder="Message"
+                              required=""
+                            ></textarea>
+                          </fieldset>
+                        </div>
+                        <div class="col-lg-12">
+                          <fieldset>
+                            <button
+                              type="submit"
+                              id="form-submit"
+                              class="main-button"
+                            >
+                              Send Message Now
+                            </button>
+                          </fieldset>
+                        </div>
+                      </form>
+                      <!-- <div class="col-lg-6">
                         <fieldset>
                           <input
                             type="name"
@@ -1218,7 +1277,7 @@
                             Send Message Now
                           </button>
                         </fieldset>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                 </div>
