--- a/index.html
+++ b/index.html
@@ -1200,6 +1200,11 @@
                             />
                           </fieldset>
                         </div>
+                        <input
+                          type="hidden"
+                          name="_next"
+                          value="https://anas-pioneers32.github.io/new-web/#[object%20Object]"
+                        />
                         <div class="col-lg-6">
                           <fieldset>
                             <textarea
@@ -1224,6 +1229,7 @@
                           </fieldset>
                         </div>
                       </form>
+
                       <!-- <div class="col-lg-6">
                         <fieldset>
                           <input
